ADD: cek HTTP client context route
