# docs/swagger.yaml
@@ -42,6 +42,52 @@ info:
   title: Coba Gin Golang
   version: 0.0.1
 paths:
+  /cek_http:
+    get:
+      parameters:
+      - description: Token Login
+        in: header
+        name: X-TOKEN
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            X-TOKEN:
+              description: Token login
+              type: string
+          schema:
+            type: string
+        "206":
+          description: Error lain
+          schema:
+            $ref: '#/definitions/model.FailResponse'
+        "207":
+          description: Gagal Login
+          schema:
+            $ref: '#/definitions/model.FailResponse'
+        "209":
+          description: Invalid JSON input
+          schema:
+            $ref: '#/definitions/model.FailResponse'
+        "210":
+          description: Error Middleware Internal
+          schema:
+            $ref: '#/definitions/model.FailResponse'
+        "214":
+          description: Data Pengguna Tidak Ditemukan
+          schema:
+            $ref: '#/definitions/model.FailResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Cek kondisi HTTP client pool
+      tags:
+      - test
   /cek_middleware:
     get:
       parameters:
